remove the enqueued endpoint
